# CHALLENGE-PYTHON-API

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend_test/backend_test/: settings.py  urls.py
backend_test/rest_api/: admin.py  models.py  serializers.py  views.py
backend_test/rest_api/migrations/: 0001_initial.py
docker/: Dockerfile  local.env  start.sh
