[tool.poetry]
name = "backend_test"
version = "0.1.0"
description = ""
authors = ["HUGO DEL SOLAR <hudrec11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.7"
djangorestframework = "^3.14.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
